Fix justify-content in reset_wrap

--- a/src/CalcBlock/calcItem.css
+++ b/src/CalcBlock/calcItem.css
@@ -133,7 +133,7 @@ input::-webkit-inner-spin-button {
 
 .calculator .reset_wrap {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   width: 100%;
 }
 
